<resources>
    <string name="app_name">CITA</string>
    <string name="Training_Set">Training Set</string>
    <string-array name="Exercises">
        <item>Minimal pairs</item>
        <item>Minimal pairs 2</item>
        <item>Word list</item>
        <item>Picture description</item>
        <item>Sentence reading</item>
        <item>Syllable repetition</item>
    </string-array>
    <string name="Settings">Settings</string>
    <string name="Motivation">Good Job!</string>
    <string name="Done">Done</string>
    <string name="Again">Again</string>
    <string name="UploadPictures">Upload pictures</string>
    <string name="UploadPicturesGallery">Upload your personal picture from your gallery</string>
    <string name="Gallery">Gallery</string>
    <string name="timefornotifications">time for notifications</string>
    <string name="DescriptionMinPairs2">Select the word you heard</string>
    <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
    <string name="DescriptionSyllableRepetition">Repeat the shown syllable</string>
    <string name="ExplanationSyllableRepetition1">Please repeat\u0020</string>
    <string name="ExplanationSyllableRepetition2">\u0020as many times as possible in five seconds. For example like that:\u0020</string>
    <string name="ExamplePataka"> pataka, pataka, pataka, pataka, ..., pataka.</string>
    <string name="ExamplePa"> pa, pa, pa, pa, ..., pa.</string>
    <string name="ExampleTa"> ta, ta, ta, ta, ..., ta.</string>
    <string name="ExampleKa"> ka, ka, ka, ka, ..., ka.</string>
    <string name="ExamplePetaka"> petaka, petaka, petaka, petaka, ..., petaka.</string>
    <string name="ExamplePakata"> pakata, pakata, pakata, pakata, ..., pakata.</string>
    <string name="ExampleSifaschu"> sifaschu, sifaschu, sifaschu, sifaschu, ..., sifaschu.</string>
    <string name="ExplanationSyllableRepetition3">\u0020Press \"record\" when you are ready to start the timer. The timer automatically stops the exercise after five seconds.</string>
    <string name="DescriptionMinPairs">Say the word you heard</string>
    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to a word, then press the \"record\" button and repeat the word you heard. Press \"recording ...\" when you are done. </string>
    <string name="DescriptionWordList">Read the word on the screen</string>
    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. Press \"recording ...\" when you are done. </string>
    <string name="Listen">listen</string>
    <string name="record">record</string>
    <string name="title_notify">CITA</string>
    <string name="permissions">"To use this application, the permission to record your voice, to write to your external storage and to use your camera is needed"</string>
    <string name="trainingsetDesc">Each day you get a new set of different exercises to do. Click here to start your daily training set now!</string>
    <string name="ExerciseListDesc">Click here to see the list of possible exercises you can do individually. Do them as much as you want and whenever you want!</string>
    <string name="dailyResultDesc">Check out your daily results here! See how the values of your hearing, your intonation and your speech rate were today!</string>
    <string name="evaluationOverTimeDesc">See how you changed over the course of time! Check out if you improved in the last months and keep your training up!</string>
    <string name="content_notify">Do your daily exercises now to keep improving!</string>
    <string name="DescriptionPictureDescription">Describe the shown picture</string>
    <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture on the screen. When you are finished press the \"recording ...\" button.</string>
    <string name="DescriptionSentenceReading">Read the sentence</string>
    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press \"recording ...\" when you are done.</string>
    <string name="MinimalPairs"><u>Minimal pairs</u></string>
    <string name="MinimalPairsDescription">In this exercise you have to repeat words, which you will hear from the device.\nThis exercise is used to measure the intelligebility of your speech.</string>
    <string name="MinimalPairs2"><u>Minimal pairs 2</u></string>
    <string name="minimalPairs2Description">In this exercise you have to choose a word, which you will hear from the device.\nThis exercise is used to measure your hearing ability.</string>
    <string name="WordList"><u>Word list</u></string>
    <string name="WordListDescription">In this exercise you have to read a list of different words.\nThis exercise is used to measure the articulation precision of your speech</string>
    <string name="PictureDescription"><u>Picture description</u></string>
    <string name="PictureDescriptionDescription">In this exercise you have to describe a picture, which will be shown on the screen.\nThis exercise is used to measure the intonation of your voice during free speech.</string>
    <string name="SentenceReading"><u>Sentence reading</u></string>
    <string name="SentenceReadingDescription">In this exercise you have to read a sentence, which will be shown on the screen.\nThis exercise is used to measure the intonation of your voice during continuous speech.</string>
    <string name="SyllableRepetition"><u>Syllable repetition</u></string>
    <string name="needed">Permission needed</string>
    <string name="SyllableRepetitionDescription">In this exercise you have to repeat the word \"Pataka\" until a timer runs out.\nThis exercise is used to measure the rate at which you speak.</string>
    <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to collect and evaluate data about your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, after which you can take a look at your results. The app will also provide you with a profile, where you can save important data about you. To do all of this CITA needs access to your microphone, your storage and your camera. To allow all of this press the start button below and then allow in the popup windows. Now press the start button below to start creating your profile for using this app.\nLet´s go !</string>
    <string name="startExercise">START</string>
    <string name="listenNotPressed">You have to press the \"listen\" button before you can repeat the word you heard!</string>
    <string name="back">back</string>
    <string name="restartSession">restart session</string>
    <string name="ready">ready</string>
    <string name="Next">Next</string>
    <string name="trainingsetExerciseFinishedTitle">Exercise Finished</string>
    <string name="ExerciseDone">Good Job! If you want to repeat the exercise please press \"Again\". If you want to continue the training session press \"Next\".</string>
    <string name="hearingAbility">hearing ability</string>
    <string name="speechrate">speech rate</string>
    <string name="intonation">intonation</string>
    <string name="save">save</string>
    <string name="none">none</string>
    <string name="correct">result</string>
    <string name="correctWord">correct word</string>
    <string name="yourWord">your word</string>
    <string name="play">play</string>
    <string name="mainTitle">Cochlear-Implant-Testing-App</string>
    <string name="trainingSetButton">Trainingset\nThis is a set of exercises you should complete every day.\nStart now!</string>
    <string name="name">name</string>
    <string name="sex">sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="divers">divers</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="both">both</string>
    <string name="smoker">Smoker</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="pitch_mean">pitch_mean</string>
    <string name="explanationRestults">This is the daily evaluation screen. Here you can see your stats after each successfully absolved training session. The scale shows how you performed in comparison to healthy test persons, where 100% means your results are in the range of a healthy person and 0% means your result is far off from the range of a healthy person. For further information like your exact value or a nice visualization, click on one of the bars to get the information for this characteristic.</string>
    <string name="hearingAbilityText">healthy control person minimal value: 100,0%\nhealthy control person maximal value: 100,0%\nhealthy control mean value: 100,0%\nyour value: </string>
    <string name="pitchText">healthy male control person minimal value: 132.3\nhealthy male control person maximal value: 332.8\nhealthy male control mean value: 257.92\nyour value: </string>
    <string name="intonationText">healthy male control person minimal value: 51.1\nhealthy male control person maximal value: 129.8\nhealthy male control mean value: 79.03\nyour value: </string>
    <string name="speechRateText">healthy male control person minimal value: 2.2\nhealthy male control person maximal value: 4.5\nhealthy male control mean value: 3.38\nyour value: </string>
    <string name="pitchTextF">healthy female control person minimal value: 303.6\nhealthy female control person maximal value: 401\nhealthy female control mean value: 345.4\nyour value: </string>
    <string name="intonationTextF">healthy female control person minimal value: 59.5\nhealthy female control person maximal value: 123.4\nhealthy female control mean value: 96.3\nyour value: </string>
    <string name="speechRateTextF">healthy female control person minimal value: 2.2\nhealthy female control person maximal value: 3.7\nhealthy female control mean value: 3.1\nyour value: </string>
    <string name="chooseyour">Choose your</string>
    <string name="exercise">EXERCISE!</string>
    <string name="startimproving">Start improving</string>
    <string name="now">NOW!</string>
    <string name="start">Start your </string>
    <string name="training">SESSION</string>
    <string name="home">Home screen</string>
    <string name="questionDialog">"How do you want to set your picture?"</string>
    <string name="dialogTitle">"Upload Pictures Option"</string>
    <string name="restartSessionHelp">When the restart session button is pressed and a training session is available, the exercises in the session will get changed.\nIf the training session has already been done, new exercises will appear and a new training session can be done!</string>
    <string name="showme">and show me what you`ve got!</string>
    <string name="cochlearImplant">Cochlear Implant</string>
    <string name="hearingAid">Hearing Aid</string>
    <string name="typeOfImplant">type of implant</string>
    <string name="sideOfImplant">side of implant</string>
    <string name="birthdate">birthdate</string>
    <string name="trainingsetText">This is the trainingset, which you should complete each day! All exercises are chosen to measure a different part of your ability to hear and speak. After you finished all the exercises go ahead and take a look at the results of the day to see your performance! If you are not happy go to exercises and choose one to improve a specific result! \n Now let`s get started! </string>
    <string name="phoneNumber">phone number</string>
    <string name="recording">recording ...</string>
    <string name="trainingsetTitle">Trainingset</string>
    <string name="listEmpty">Nothing left to do today.</string>
    <string name="user_empty">please enter your username</string>
</resources>