<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/trainingset"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Training_Set"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/exercises"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Exercises"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainingset" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="97dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:text="@string/Settings"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercises" />
</androidx.constraintlayout.widget.ConstraintLayout>