<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralRepetitionFinished">

    <TextView
        android:id="@+id/motivation"
        android:layout_width="305dp"
        android:layout_height="102dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/Motivation"
        android:textColor="#330000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done"
        android:layout_width="190dp"
        android:layout_height="111dp"
        android:layout_marginTop="124dp"
        android:text="@string/Done"
        android:textColor="#ffff"
        android:background="@color/colorPrimaryDark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivation" />

    <Button
        android:id="@+id/again"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/Again"
        android:background="#00994C"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done" />
</androidx.constraintlayout.widget.ConstraintLayout>