<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView_Profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_weight="0.5" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/name" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/name" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/phone" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phoneNumber"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNumber" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phoneNumber"
                        android:autoSizeTextType="uniform"
                        android:ems="10"
                        android:inputType="phone" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/birthdate" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/birthdate"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/birthdate" />

                    <TextView
                        android:id="@+id/editTextTextbirthdate"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"
                        android:ems="10"
                        android:textSize="20sp"
                        android:background="@drawable/underscore"
                        android:hint="@string/birthdate" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/sex" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sex"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/sex" />

                    <RadioGroup
                        android:id="@+id/rgsex"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rbGenderMale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/rbGenderFemale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/female" />

                        <RadioButton
                            android:id="@+id/rbGenderOther"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/divers" />
                    </RadioGroup>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/side_of_implant" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rdSide_of_implant"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/sideOfImplant" />

                    <RadioGroup
                        android:id="@+id/rgSideOfImplant"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbLeft"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/right" />

                        <RadioButton
                            android:id="@+id/rbRight"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/left" />

                        <RadioButton
                            android:id="@+id/rbBoth"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/both" />
                    </RadioGroup>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/type_of_implant" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/typeOfImplant"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/typeOfImplant" />

                    <RadioGroup
                        android:id="@+id/rgTypeOfImplant"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rbCochlearImplant"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/cochlearImplant" />

                        <RadioButton
                            android:id="@+id/rbHearingAid"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hearingAid" />

                        <RadioButton
                            android:id="@+id/rbBothCI"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/both" />
                    </RadioGroup>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/smoker" />

                <LinearLayout
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/smoker"
                        android:textColor="#FFFF8C00"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/smoker" />

                    <RadioGroup
                        android:id="@+id/rgSmoker"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="0.8"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/rbNoSmoker"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/no" />

                        <RadioButton
                            android:id="@+id/rbSmoker"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/yes" />
                    </RadioGroup>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:background="@drawable/line_top_bot"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_back1"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:background="#FFFF8C00"
                    android:layout_weight="0.5"
                    android:text="@string/back"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:background="#FFFF8C00"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="20dp"
                    android:text="@string/save"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/scrollView_Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/default_profile_pic"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/takePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="@id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>